--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-barlow: 'Barlow', sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,5 +19,5 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-barlow);
 }
