--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,3 +21,10 @@ body {
   background: var(--background);
   font-family: var(--font-barlow);
 }
+
+.single-thumb .range-slider__thumb[data-lower] {
+  width: 0;
+}
+.single-thumb .range-slider__range {
+  border-radius: 6px;
+}
